Forced transparent bg behind labels (fixes regression from GTK3.6)

--- a/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets.css
+++ b/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets.css
@@ -1012,6 +1012,14 @@ GtkImage {
 	-unico-inner-stroke-width: 1px;
 }
 
+/*********
+ * label *
+ *********/
+GtkLabel,
+GtkLabel:insensitive {
+    background-color: transparent;
+}
+
 /********
  * menu *
  ********/
